fixed spacing akward

--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -3,6 +3,8 @@
 * {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    margin: 0; 
+    padding: 0;
 }
 
 
@@ -60,7 +62,8 @@ h3 {
 
 ul, ol {
 
-    padding: 20px;
+    padding-left: 20px;
+    margin-top: 15px;
 
 }
 
